<resources>
    <string name="google_maps_api_key">AIzaSyB3QrVGo5FthpMQSqBxRbLJSbNem7UT8sc</string>
    <string name="app_name">City infrastructure manager</string>
    <string name="main_activity_name">Popis ispada</string>
    <string name="search">Search</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="odaberite_datum">Odaberite datum</string>
    <string name="odaberite_zupaniju">Odaberite županiju</string>
    <string name="odaberite_ispad">Odaberite ispad</string>
    <string name="nestanak_elektricne_energije">Nestanak električne energije</string>
    <string name="nestanak_plina">Nestanak plina</string>
    <string name="nestanak_vode">Nestanak vode</string>
    <string name="prekid_prometa">Prekid prometa</string>
    <string name="informacije_o_bojama">Informacije o bojama</string>
    <string name="pocetak_ispada">Početak ispada</string>
    <string name="kraj_ispada">Kraj ispada</string>
    <string name="filter">Filter</string>
    <string name="filtriraj">Filtriraj</string>
    <string name="poni_ti">Poništi</string>
</resources>
