<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/fdNaslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informacije_o_bojama"
            android:textSize="20sp"
            android:textColor="@color/colorSecondaryLight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fdRazmak"
            android:layout_marginBottom="10dp"/>

        <View
            android:id="@+id/fdRazmak"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorSecondaryLight"
            app:layout_constraintTop_toBottomOf="@id/fdNaslov"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/odaberiteZupaniju"
            android:layout_marginBottom="15dp"/>


        <TextView
            android:id="@+id/odaberiteZupaniju"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nestanak_elektricne_energije"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/fdRazmak"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/spinnerZupanije"
            app:layout_constraintBottom_toTopOf="@id/odaberiteIspad"/>

        <TextView
            android:id="@+id/spinnerZupanije"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/odaberiteZupaniju"
            app:layout_constraintLeft_toRightOf="@id/odaberiteZupaniju"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/odaberiteZupaniju"
            android:background="@color/Nestanak_elektricne_energije"/>

        <TextView
            android:id="@+id/odaberiteIspad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nestanak_plina"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/odaberiteZupaniju"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/spinnerIspad"
            app:layout_constraintBottom_toTopOf="@id/fdTxtPocetak"/>

        <TextView
            android:id="@+id/spinnerIspad"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/odaberiteIspad"
            app:layout_constraintLeft_toRightOf="@id/odaberiteIspad"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/odaberiteIspad"
            android:background="@color/Nestanak_plina"/>

        <TextView
            android:id="@+id/fdTxtPocetak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nestanak_vode"
            android:textSize="15sp"
            android:paddingRight="5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/odaberiteIspad"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtKraj"
            app:layout_constraintRight_toLeftOf="@id/fdPickerPocetak"/>

        <TextView
            android:id="@+id/fdPickerPocetak"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fdTxtPocetak"
            app:layout_constraintLeft_toRightOf="@id/fdTxtPocetak"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fdTxtPocetak"
            android:background="@color/Nestanak_vode"/>

        <TextView
            android:id="@+id/txtKraj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/prekid_prometa"
            android:textSize="15sp"
            android:paddingRight="5dp"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/fdTxtPocetak"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/krajPciker"/>

        <TextView
            android:id="@+id/krajPciker"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtKraj"
            app:layout_constraintLeft_toRightOf="@id/txtKraj"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtKraj"
            android:background="@color/Prekid_prometa"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
